--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,14 +10,14 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag sitkoru/php7-ci:$GITHUB_SHA
+      run: docker build . --file Dockerfile --tag docker.pkg.github.com/sitkoru/php7-ci:$GITHUB_SHA
     - name: Tag as latest
       if: github.ref == 'refs/heads/master'
-      run: docker tag sitkoru/php7-ci:$GITHUB_SHA sitkoru/php7-ci:latest
+      run: docker tag docker.pkg.github.com/sitkoru/php7-ci:$GITHUB_SHA docker.pkg.github.com/sitkoru/php7-ci:latest
     - name: Docker login
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      run: docker login docker.pkg.github.com -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
     - name: Docker push tag
-      run: docker push sitkoru/php7-ci:$GITHUB_SHA
+      run: docker push docker.pkg.github.com/sitkoru/php7-ci:$GITHUB_SHA
     - name: Docker push latest
       if: github.ref == 'refs/heads/master'
-      run: docker push sitkoru/php7-ci:latest
+      run: docker push docker.pkg.github.com/sitkoru/php7-ci:latest
