Use build number generator

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -9,15 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Generate build number
+      uses: einaregilsson/build-number@v1 
+      with:
+        token: ${{secrets.github_token}}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag docker.pkg.github.com/sitkoru/php7-ci/php7-ci:$GITHUB_SHA
+      run: docker build . --file Dockerfile --tag docker.pkg.github.com/sitkoru/php7-ci/php7-ci:ci-$BUILD_NUMBER
     - name: Tag as latest
       if: github.ref == 'refs/heads/master'
-      run: docker tag docker.pkg.github.com/sitkoru/php7-ci/php7-ci:$GITHUB_SHA docker.pkg.github.com/sitkoru/php7-ci/php7-ci:latest
+      run: docker tag docker.pkg.github.com/sitkoru/php7-ci/php7-ci:ci-$BUILD_NUMBER docker.pkg.github.com/sitkoru/php7-ci/php7-ci:latest
     - name: Docker login
       run: docker login docker.pkg.github.com -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
     - name: Docker push tag
-      run: docker push docker.pkg.github.com/sitkoru/php7-ci/php7-ci:$GITHUB_SHA
+      run: docker push docker.pkg.github.com/sitkoru/php7-ci/php7-ci:ci-$BUILD_NUMBER
     - name: Docker push latest
       if: github.ref == 'refs/heads/master'
       run: docker push docker.pkg.github.com/sitkoru/php7-ci/php7-ci:latest
