--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,4 +17,4 @@ jobs:
           registry: docker.pkg.github.com
           repository: sitkoru/php7-ci/php7-ci
           tag_with_ref: true
-          tags: latest, ci-${{ GITHUB_RUN_ID }}
+          tags: latest, ci-$GITHUB_RUN_ID
