--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,10 +11,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Publish to Registry
         uses: docker/build-push-action@v1
+        env:
+          DOCKER_BUILDKIT: 1
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
           repository: sitkoru/php7-ci/php7-ci
           tag_with_ref: true
-          tags: latest, ci-$GITHUB_RUN_ID
+          tags: latest, ci-${{ github.run_id }}
